tests/ui-1.39_post/flatten_and_methods.stderr
error: methods and doc comments are not allowed for flattened entry
  --> $DIR/flatten_and_methods.rs:22:24
   |
22 |     #[structopt(short, flatten)]
   |                        ^^^^^^^

error: could not compile `structopt-tests`.
